src/objects/NttDataEpa__EpAdapterUnitOfTransfer__c.object
<CustomObject>
    <description>EPA transfers multiple Units of Work with a single Unit of Transfer.</description>
    <fields>
        <fullName>NttDataEpa__Complexity__c</fullName>
        <formula>NttDataEpa__NumDmlStatements__c +  NttDataEpa__NumDmlRecords__c  / 100  +  NttDataEpa__NumSoqlQueries__c  +  NttDataEpa__NumSoqlRecords__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__CpuTime__c</fullName>
        <label>CPU Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumDmlRecords__c</fullName>
        <description>Number of records touched by DML statements within execution of the UoT.</description>
        <inlineHelpText>Number of records touched by DML statements within execution of the UoT.</inlineHelpText>
        <label>Number of DML Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumDmlStatements__c</fullName>
        <description>Number of DML statements within execution of the UoT.</description>
        <inlineHelpText>Number of DML statements within execution of the UoT.</inlineHelpText>
        <label>Number of DML Statements</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumSoqlQueries__c</fullName>
        <description>Number of SOQL queries within execution of the UoT.</description>
        <inlineHelpText>Number of SOQL queries within execution of the UoT.</inlineHelpText>
        <label>Number of SOQL Queries</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumSoqlRecords__c</fullName>
        <description>Number of records retrieved by SOQL queries within execution of the UoT.</description>
        <inlineHelpText>Number of records retrieved by SOQL queries within execution of the UoT.</inlineHelpText>
        <label>Number of SOQL Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumUnitsOfWork__c</fullName>
        <description>The number of units of work comprised in this unit of transfer.</description>
        <inlineHelpText>The number of units of work comprised in this unit of transfer.</inlineHelpText>
        <label>Number of Units of Work</label>
        <summaryForeignKey>NttDataEpa__EpAdapterUnitOfWork__c.NttDataEpa__UnitOfTransfer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__RunTime__c</fullName>
        <label>Run Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__UnitOfTransferId__c</fullName>
        <description>EPA generated ID of UoT</description>
        <externalId>true</externalId>
        <label>Unit of Transfer Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Unit of Transfer</label>
    <listViews>
        <fullName>NttDataEpa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit of Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units of Transfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>